Update to mvp version and what was presented in week 6

--- a/Guess_A_Job.ipynb
+++ b/Guess_A_Job.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 54,
    "metadata": {
     "collapsed": false
    },
@@ -41,25 +41,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "% Grade A loans for operator: 11.6580310881\n",
-      "Average APR for Grade A loans operator: 7.02977777778\n",
-      "Average APR for all loans for operator: 14.5557772021\n"
+      "Job not found.  Get a new job!\n"
      ]
     }
    ],
    "source": [
-    "GuessAJob = 'operator'\n",
+    "GuessAJob = 'clown'\n",
+    "\n",
+    "FoundAJob = False\n",
     "k = 0\n",
     "while k < len(resultdf.columns):\n",
     "    if type(resultdf.columns[k]) == str:\n",
     "        if fuzz.ratio(GuessAJob, resultdf.columns[k]) > 85:\n",
-    "            print '% Grade A loans for ' + GuessAJob + ': ' \\\n",
-    "                + str(float(resultdf[GuessAJob][0]) * 100)\n",
-    "            print 'Average APR for Grade A loans ' + GuessAJob + ': ' + \\\n",
-    "                str(resultdf[GuessAJob][1])\n",
+    "            FoundAJob = True\n",
+    "            if float(resultdf[resultdf.columns[k]][0]) > 1.0:\n",
+    "                '% Grade A loans for ' + GuessAJob + ': Error'\n",
+    "            else:\n",
+    "                print '% Grade A loans for ' + GuessAJob + ': ' \\\n",
+    "                    + str(float(resultdf[resultdf.columns[k]][0]) * 100) + '%'\n",
+    "            print 'Average APR for Grade A loans for ' + GuessAJob + ': ' + \\\n",
+    "                str(resultdf[resultdf.columns[k]][1])\n",
     "            print 'Average APR for all loans for ' + GuessAJob + ': ' + \\\n",
-    "                str(resultdf[GuessAJob][2])\n",
-    "    k += 1"
+    "                str(resultdf[resultdf.columns[k]][2])\n",
+    "    k += 1\n",
+    "if FoundAJob == False:\n",
+    "    print 'Job not found.  Get a new job!'"
    ]
   },
   {
