--- a/Job_Title_Economics.ipynb
+++ b/Job_Title_Economics.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -472,7 +472,7 @@
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [
     {
@@ -2129,20 +2129,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
      "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYsAAAEACAYAAABCl1qQAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAFn5JREFUeJzt3W2MXNd93/Hvz5IVy7EcVnVBUZRSCQgNi4UbCarNoHaq\nMZIwVNBIchDooahKNGxgg/EDUrQNaaDVJgESpYBdyyikN5YjyoiZEg2syolMi1I5qfvCXjigbFo0\nKzIwDS9r0kFiR3LcpiT074u5FMfrFc+SMzs7u/v9AAOeOfee+3A4u7+95z5MqgpJki7kNcu9AZKk\n6WdYSJKaDAtJUpNhIUlqMiwkSU2GhSSpaVFhkeSyJIeSfKZ7f3WSA0leSPJ0knVD8+5OcizJ0SRb\nh+pvTXK4m/bQ+HdFkrRUFntk8UHgCHDupoxdwIGqejPwbPeeJJuBe4DNwDbg4STp2jwC7KiqTcCm\nJNvGswuSpKXWDIsk1wG/AHwcOPeL/w5gT1feA9zVle8E9lbVmao6ARwHtiTZAFxVVbPdfI8PtZEk\nTbnFHFn8J+DfAi8P1a2vqtNd+TSwvitfC8wNzTcHbFyg/mRXL0laAS4YFkn+KfDtqjrE+aOKH1CD\n54X4zBBJWsUub0z/x8AdSX4BeB3wxiSfBE4nuaaqTnVDTN/u5j8JXD/U/joGRxQnu/Jw/cmFVpjE\n4JGki1RVC/5BPy4XPLKoqg9V1fVVdSNwL/Dfq+p+4ElgezfbduCJrvwkcG+SK5LcCGwCZqvqFPBi\nki3dCe/7h9ostF5fY3g98MADy74Nq+llf9qf0/qahNaRxXzntupBYF+SHcAJ4G6AqjqSZB+DK6fO\nAjvr/J7sBB4DrgSeqqr9o226JGlSFh0WVfWnwJ925b8CfvZV5vsd4HcWqP8z4K2XtpmSpOXkHdyr\nWK/XW+5NWFXsz/GyP1eWTGq8a7GS1LRtkyRNsyTUcp7gliQJDAtJ0iIYFpKkJsNCktRkWEiSmgwL\nSVKTYSFJajIsJElNhoUkqcmwkCQ1GRaSpCbDQpLUdLHfZ6EpM/guqdH44EZJLYbFqjDKL/vRwsaw\nktYGw0JjsHxhJWkyPGchSWoyLCRJTRcMiySvS/LFJM8lOZLkd7v6mSRzSQ51r9uH2uxOcizJ0SRb\nh+pvTXK4m/bQ0u2SJGncml+rmuT1VfX9JJcD/xP4N8DPAC9V1UfmzbsZ+BTwNmAj8AywqaoqySzw\nvqqaTfIU8LGq2r/A+vxa1YswOME82jmDUfp7udcvaUq+VrWqvt8VrwAuA77TvV9ow+4E9lbVmao6\nARwHtiTZAFxVVbPdfI8Dd42y4ZKkyWmGRZLXJHkOOA0crKrnu0nvT/LlJI8mWdfVXQvMDTWfY3CE\nMb/+ZFcvSVoBFnNk8XJV3QxcB/yTJD3gEeBG4GbgW8CHl3IjJUnLa9H3WVTVXyf5E+AfVVX/XH2S\njwOf6d6eBK4fanYdgyOKk115uP7kq61rZmbmlXKv16PX6y12MyVp1ev3+/T7/Ymu84InuJO8CThb\nVd9NciXwOeA3geer6lQ3z68Db6uqfzZ0gvvtnD/B/RPdCe4vAh8AZoE/wRPcY7HcJ5iXe/2SJnOC\nu3VksQHYk+Q1DIasPllVzyZ5PMnNDH5LfB14D0BVHUmyDzgCnAV2Dv3m3wk8BlwJPLVQUEiSplPz\n0tlJ88ji4iz3X/bLvX5JU3LprCRJPkhQy27UJ9d6ZCItPcNCU8Cn1krTzmEoSVKTYSFJajIsJElN\nhoUkqcmwkCQ1GRaSpCbDQpLUZFhIkpoMC0lSk2EhSWoyLCRJTYaFJKnJsJAkNRkWkqQmw0KS1GRY\nSJKaLhgWSV6X5ItJnktyJMnvdvVXJzmQ5IUkTydZN9Rmd5JjSY4m2TpUf2uSw920h5ZulyRJ43bB\nsKiq/wu8q6puBv4h8K4k7wR2AQeq6s3As917kmwG7gE2A9uAh3P+OzMfAXZU1SZgU5JtS7FDkqTx\naw5DVdX3u+IVwGXAd4A7gD1d/R7grq58J7C3qs5U1QngOLAlyQbgqqqa7eZ7fKiNJGnKNcMiyWuS\nPAecBg5W1fPA+qo63c1yGljfla8F5oaazwEbF6g/2dVLklaAy1szVNXLwM1Jfgz4XJJ3zZteSWqc\nGzUzM/NKudfr0ev1xrl4SVrR+v0+/X5/outM1eJ/zyf598D/Af4V0KuqU90Q08GqekuSXQBV9WA3\n/37gAeAb3Tw3dfX3AbdV1XsXWEddzDatdYNTQqP0V9qzNI26/tHa+3nRWpeEqhrHD/Oral0N9aZz\nVzoluRL4OeAQ8CSwvZttO/BEV34SuDfJFUluBDYBs1V1CngxyZbuhPf9Q2207GqEl6S1oDUMtQHY\nk+Q1DILlk1X1bJJDwL4kO4ATwN0AVXUkyT7gCHAW2Dl0mLATeAy4EniqqvaPe2ckSUvjooahJsFh\nqIsznmGold3ez4vWumUfhpIkCQwLSdIiGBaSpCbDQpLU1LwpT0vr/KOzJGl6GRZTYblvqpOkC3MY\nSpLUZFhIkpoMC0lSk2EhSWoyLCRJTYaFJKnJS2e14o3jXhUfRihdmGGhVWDUX/TeqyK1OAwlSWoy\nLCRJTYaFJKnJsJAkNRkWkqSmZlgkuT7JwSTPJ/lqkg909TNJ5pIc6l63D7XZneRYkqNJtg7V35rk\ncDftoaXZJUnSuKV1fXmSa4Brquq5JG8A/gy4C7gbeKmqPjJv/s3Ap4C3ARuBZ4BNVVVJZoH3VdVs\nkqeAj1XV/nntay1d8z64R2DUR5TbfjTxPgutaEmoqiW9Brx5ZFFVp6rqua78PeBrDEIAFr5A/U5g\nb1WdqaoTwHFgS5INwFVVNdvN9ziD0JEkTbmLOmeR5AbgFuALXdX7k3w5yaNJ1nV11wJzQ83mGITL\n/PqTnA8dSdIUW/Qd3N0Q1H8FPlhV30vyCPBb3eTfBj4M7BjHRs3MzLxS7vV69Hq9cSxWklaFfr9P\nv9+f6Dqb5ywAkrwW+GPgs1X10QWm3wB8pqremmQXQFU92E3bDzwAfAM4WFU3dfX3AbdV1XvnLctz\nFhe3BNt7zkJr3FScs8jgt9mjwJHhoOjOQZzzbuBwV34SuDfJFUluBDYBs1V1CngxyZZumfcDT4xp\nPyRJS2gxw1DvAP458JUkh7q6DwH3JbmZwZ91XwfeA1BVR5LsA44AZ4GdQ4cKO4HHgCuBp+ZfCSVJ\nmk6LGoaaJIehLnoJtp+Cp86upc+sps8khqF8RLkEjB5Y0urm4z4kSU2GhSSpybCQJDUZFpKkJsNC\nktRkWEiSmgwLSVKTYSFJajIsJElNhoUkqcmwkCQ1GRaSpCbDQpLUZFhIkpoMC0lSk2EhSWoyLCRJ\nTYaFJKmpGRZJrk9yMMnzSb6a5ANd/dVJDiR5IcnTSdYNtdmd5FiSo0m2DtXfmuRwN+2hpdklSdK4\nLebI4gzw61X1D4CfAn4tyU3ALuBAVb0ZeLZ7T5LNwD3AZmAb8HCSc19S/Aiwo6o2AZuSbBvr3kiS\nlkQzLKrqVFU915W/B3wN2AjcAezpZtsD3NWV7wT2VtWZqjoBHAe2JNkAXFVVs918jw+1kSRNsYs6\nZ5HkBuAW4IvA+qo63U06DazvytcCc0PN5hiEy/z6k129JGnKXb7YGZO8Afgj4INV9dL5kSWoqkpS\n49qomZmZV8q9Xo9erzeuRUvSitfv9+n3+xNdZ6rav+OTvBb4Y+CzVfXRru4o0KuqU90Q08GqekuS\nXQBV9WA3337gAeAb3Tw3dfX3AbdV1XvnrasWs02rxSB0R9lf24/WfjzbsJY+s5o+SaiqtOe8dIu5\nGirAo8CRc0HReRLY3pW3A08M1d+b5IokNwKbgNmqOgW8mGRLt8z7h9pIkqZY88giyTuB/wF8hfN/\nfu0GZoF9wI8DJ4C7q+q7XZsPAb8CnGUwbPW5rv5W4DHgSuCpqvrAAuvzyOLilmB7jyy0xk3iyGJR\nw1CTZFhc9BJsb1hojZuKYShJkgwLSVKTYSFJajIsJElNhoUkqcmwkCQ1GRaSpCbDQpLUZFhIkpoM\nC0lSk2EhSWoyLCRJTYaFJKnJsJAkNRkWkqQmw0KS1GRYSJKaDAtJUtPly70B0mow+HrcS+fXsmra\nNY8sknwiyekkh4fqZpLMJTnUvW4fmrY7ybEkR5NsHaq/NcnhbtpD498VaTnVCC9p+i1mGOr3gW3z\n6gr4SFXd0r0+C5BkM3APsLlr83DO/8n1CLCjqjYBm5LMX6YkaUo1w6KqPg98Z4FJCx133wnsraoz\nVXUCOA5sSbIBuKqqZrv5HgfuurRNliRN2ignuN+f5MtJHk2yrqu7FpgbmmcO2LhA/cmuXpK0Alzq\nCe5HgN/qyr8NfBjYMZYtAmZmZl4p93o9er3euBYtSStev9+n3+9PdJ1ZzFUYSW4APlNVb73QtCS7\nAKrqwW7afuAB4BvAwaq6qau/D7itqt67wPJqLV0ZMjilM8r+2n70k8TLvQ3xaiiNJAlVNdoleQ2X\nNAzVnYM4593AuSulngTuTXJFkhuBTcBsVZ0CXkyypTvhfT/wxAjbLUmaoOYwVJK9wG3Am5J8k8GR\nQi/JzQz+nPo68B6AqjqSZB9wBDgL7Bw6TNgJPAZcCTxVVfvHvC+SpCWyqGGoSXIY6qKXYHuHobTG\nTWIYyju4RzTqnbuStBIYFmMx6l+lkjTdDAtpCvhsKU07w0KaCh6darr5iHJJUpNhIUlqMiwkSU2G\nhSSpybCQJDUZFpKkJsNCktRkWEiSmgwLSVKTYSFJajIsJElNhoUkqcmwkCQ1GRaSpCYfUS6tAn4f\nhpZa88giySeSnE5yeKju6iQHkryQ5Okk64am7U5yLMnRJFuH6m9Ncrib9tD4d0Vay2qEl9S2mGGo\n3we2zavbBRyoqjcDz3bvSbIZuAfY3LV5OOf/5HkE2FFVm4BNSeYvU5I0pZphUVWfB74zr/oOYE9X\n3gPc1ZXvBPZW1ZmqOgEcB7Yk2QBcVVWz3XyPD7WRJE25Sz3Bvb6qTnfl08D6rnwtMDc03xywcYH6\nk129JGkFGPkEd1VVkrEOfM7MzLxS7vV69Hq9cS5ekla0fr9Pv9+f6DqzmKsgktwAfKaq3tq9Pwr0\nqupUN8R0sKrekmQXQFU92M23H3gA+EY3z01d/X3AbVX13gXWVSvpyozBKZlRttf2y9t+GrZh+duv\npJ85/bAkVNVol8Q1XOow1JPA9q68HXhiqP7eJFckuRHYBMxW1SngxSRbuhPe9w+1kSRNueYwVJK9\nwG3Am5J8E/gPwIPAviQ7gBPA3QBVdSTJPuAIcBbYOXSYsBN4DLgSeKqq9o93VyRJS2VRw1CT5DCU\n7Sfbfhq2Yfnbr6SfOf2waR6GkiStIYaFJKnJsJAkNRkWkqQmw0KS1GRYSJKaDAtJUpNhIUlq8pvy\nJI1k1G/pO8cbA6ebYSFpDMZxF72mmWEhaWxHB1q9DAtJjP5sKq12nuCWJDUZFpKkJsNCktRkWEiS\nmgwLSVKTYSFJahopLJKcSPKVJIeSzHZ1Vyc5kOSFJE8nWTc0/+4kx5IcTbJ11I2XJE3GqEcWBfSq\n6paqentXtws4UFVvBp7t3pNkM3APsBnYBjycxCMbSVoBxvHLev4dOXcAe7ryHuCurnwnsLeqzlTV\nCeA48HYkSVNvHEcWzyT5UpJf7erWV9XprnwaWN+VrwXmhtrOARtHXL8kaQJGfdzHO6rqW0n+HnAg\nydHhiVVVSS70HAEfMylJK8BIYVFV3+r+/Yskn2YwrHQ6yTVVdSrJBuDb3ewngeuHml/X1f2QmZmZ\nV8q9Xo9erzfKZkrSqtLv9+n3+xNdZy71GfJJXg9cVlUvJflR4GngN4GfBf6yqn4vyS5gXVXt6k5w\nf4pBoGwEngF+ouZtQJL5VVNt8LTOUR/CZvvlaz8N27DW2w+WsZJ+7qdNEqpqSZ/oOMqRxXrg092j\njS8H/qCqnk7yJWBfkh3ACeBugKo6kmQfcAQ4C+xcUakgSWvYJR9ZLBWPLGw/2fbTsA1rvf1gGSvp\n537aTPuRxYrnF75I02PUn0fDZmmt6bAY8OsgpengFzBNM8NC0po3jlGG1X5kY1hIEuCRzYX5bCZJ\nUpNhIUlqchhK0qrg1Y1Ly7CQtEp4zmEpOQwlSWoyLCRJTYaFJKnJsJAkNXmCW5LGYLU/28qwkKSx\nWN1XYzkMJUlqMiwkSU2GhSSpybCQJDUZFpKkpomHRZJtSY4mOZbkNya9fkmaRkku+TUJEw2LJJcB\n/xnYBmwG7kty0yS3YW3pL/cGrDL95d6AVaa/3BswZWqE19Kb9H0WbweOV9UJgCR/CNwJfO1iF3Tw\n4EF+8Rd/iZdfHu8Gri59oLfM27Ca9LE/x6mP/blyTDosNgLfHHo/B2y5lAWdPXuWyy77Sf7mbz59\niZvyTeAnL7GtJK0tkw6LsR4v/e3ffpU3vvFfXNqG1Pd56aVxbo0krV6Z5PNIkvwUMFNV27r3u4GX\nq+r3huaZ7gekSNIUqqolPdM96bC4HPhfwM8A/xuYBe6rqos+ZyFJmpyJDkNV1dkk7wM+B1wGPGpQ\nSNL0m+iRhSRpZZqaO7i9We/VJTmR5CtJDiWZ7equTnIgyQtJnk6ybmj+3V0/Hk2ydaj+1iSHu2kP\nDdX/SJL/0tV/Icnfn+weLq0kn0hyOsnhobqJ9F+S7d06XkhyaVdjTJFX6cuZJHPd5/NQktuHptmX\nF5Dk+iQHkzyf5KtJPtDVT9/ns6qW/cVgSOo4cAPwWuA54Kbl3q5peQFfB66eV/cfgX/XlX8DeLAr\nb+7677Vdfx7n/BHkLPD2rvwUsK0r7wQe7sr3AH+43Ps85v77aeAW4PAk+w+4GvhzYF33+nNg3XL3\nxxL05QPAv15gXvuy3Z/XADd35TcwOKd70zR+PqflyOKVm/Wq6gxw7mY9nTf/Soc7gD1deQ9wV1e+\nE9hbVWdqcPPjcWBLkg3AVVU12833+FCb4WX9EYMLEFaNqvo88J151ZPov58Hnq6q71bVd4EDDJ5e\nsGK9Sl/Cwt/eY182VNWpqnquK3+PwQ3KG5nCz+e0hMVCN+ttXKZtmUYFPJPkS0l+tatbX1Wnu/Jp\nYH1XvpZB/51zri/n15/kfB+/0v9VdRb46yRXj30vpstS99/fvcCyVqP3J/lykkeHhkzsy4uQ5AYG\nR21fZAo/n9MSFp5lv7B3VNUtwO3AryX56eGJNTimtA8vkf03skeAG4GbgW8BH17ezVl5kryBwV/9\nH6yqH7hdeFo+n9MSFieB64feX88PJt6aVlXf6v79C+DTDIbtTie5BqA7BP12N/v8vryOQV+e7Mrz\n68+1+fFuWZcDP1ZVf7UkOzM9lrr//nKBZa3Kz3VVfbs6wMcZfD7BvlyUJK9lEBSfrKonuuqp+3xO\nS1h8CdiU5IYkVzA4CfPkMm/TVEjy+iRXdeUfBbYChxn0z/Zutu3AuQ/Zk8C9Sa5IciOwCZitqlPA\ni0m2JAlwP/DfhtqcW9YvA88u8W5Ng0n039PA1iTrkvwd4OcY3GO0qnS/zM55N4PPJ9iXTd3+Pwoc\nqaqPDk2avs/ncl8NMHRVwO0MrgQ4Duxe7u2ZlheDw/vnutdXz/UNgysZngFe6P7T1w21+VDXj0eB\nnx+qv5XBD/Jx4GND9T8C7AOOAV8Ablju/R5zH+5l8MSA/8dg7PZfTqr/unUd617bl7svlqAvf4XB\nydSvAF9m8EttvX256P58J/By9/N9qHttm8bPpzflSZKapmUYSpI0xQwLSVKTYSFJajIsJElNhoUk\nqcmwkCQ1GRaSpCbDQpLU9P8BFgUcf/AGhhUAAAAASUVORK5CYII=\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x11809a510>"
+       "(array([   40.,   421.,  1406.,  2840.,  3675.,  2992.,  3645.,  3394.,\n",
+       "         2695.,  2441.,  1588.,  1370.,  1098.,   730.,   764.,   424.,\n",
+       "          311.,   399.,   204.,    83.]),\n",
+       " array([   7000.  ,   16649.95,   26299.9 ,   35949.85,   45599.8 ,\n",
+       "          55249.75,   64899.7 ,   74549.65,   84199.6 ,   93849.55,\n",
+       "         103499.5 ,  113149.45,  122799.4 ,  132449.35,  142099.3 ,\n",
+       "         151749.25,  161399.2 ,  171049.15,  180699.1 ,  190349.05,  199999.  ]),\n",
+       " <a list of 20 Patch objects>)"
       ]
      },
+     "execution_count": 11,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -2150,7 +2157,7 @@
     "A_incomes = df_A_only['annual_inc'].dropna()\n",
     "A_small_incs = [x for x in A_incomes if x < 200000]\n",
     "plt.hist(A_small_incs, bins=20, histtype='bar')\n",
-    "plt.legend()"
+    "#plt.legend()"
    ]
   },
   {
@@ -2268,7 +2275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -2280,14 +2287,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 118 ms, sys: 2.23 ms, total: 121 ms\n",
+      "Wall time: 119 ms\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(array([  1314.,      0.,   2725.,   1178.,   3849.,   2471.,   5218.,\n",
+       "          1212.,   1597.,   1737.,   8106.,      0.,   8714.,      0.,\n",
+       "          2020.,      0.,   6541.,   2109.,      0.,   7581.,      0.,\n",
+       "          2271.,      0.,   8110.,      0.,   2560.,   7300.,      0.,\n",
+       "          2485.,  11100.,      0.,   8225.,   2694.,   7928.,      0.,\n",
+       "          2543.,   7990.,   2463.,      0.,   6267.,   2004.,      0.,\n",
+       "             0.,   7475.,      0.,   1594.,      0.,   5580.,      0.,\n",
+       "          5339.,      0.,   3814.,   4617.,      0.,   3238.,   1850.,\n",
+       "             0.,   1959.,   1677.,   1709.,      0.,   1389.,      0.,\n",
+       "             0.,   1383.,      0.,   1061.,      0.,      0.,   1057.,\n",
+       "           881.,      0.,      0.,      0.,   1356.,      0.,      0.,\n",
+       "             0.,    986.,      0.,      0.,    582.,      0.,    654.,\n",
+       "             0.,    416.,    804.,    181.,      0.,      0.,     64.,\n",
+       "             0.,     50.,      0.,      0.,     38.,      0.,     21.,\n",
+       "             0.,     15.]),\n",
+       " array([  5.32  ,   5.5567,   5.7934,   6.0301,   6.2668,   6.5035,\n",
+       "          6.7402,   6.9769,   7.2136,   7.4503,   7.687 ,   7.9237,\n",
+       "          8.1604,   8.3971,   8.6338,   8.8705,   9.1072,   9.3439,\n",
+       "          9.5806,   9.8173,  10.054 ,  10.2907,  10.5274,  10.7641,\n",
+       "         11.0008,  11.2375,  11.4742,  11.7109,  11.9476,  12.1843,\n",
+       "         12.421 ,  12.6577,  12.8944,  13.1311,  13.3678,  13.6045,\n",
+       "         13.8412,  14.0779,  14.3146,  14.5513,  14.788 ,  15.0247,\n",
+       "         15.2614,  15.4981,  15.7348,  15.9715,  16.2082,  16.4449,\n",
+       "         16.6816,  16.9183,  17.155 ,  17.3917,  17.6284,  17.8651,\n",
+       "         18.1018,  18.3385,  18.5752,  18.8119,  19.0486,  19.2853,\n",
+       "         19.522 ,  19.7587,  19.9954,  20.2321,  20.4688,  20.7055,\n",
+       "         20.9422,  21.1789,  21.4156,  21.6523,  21.889 ,  22.1257,\n",
+       "         22.3624,  22.5991,  22.8358,  23.0725,  23.3092,  23.5459,\n",
+       "         23.7826,  24.0193,  24.256 ,  24.4927,  24.7294,  24.9661,\n",
+       "         25.2028,  25.4395,  25.6762,  25.9129,  26.1496,  26.3863,\n",
+       "         26.623 ,  26.8597,  27.0964,  27.3331,  27.5698,  27.8065,\n",
+       "         28.0432,  28.2799,  28.5166,  28.7533,  28.99  ]),\n",
+       " <a list of 100 Patch objects>)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "plt.hist(interestRates, bins=20)\n",
-    "plt.show()"
+    "%%time\n",
+    "plt.hist(interestRates, bins=100)"
    ]
   },
   {
